--- a/modules/ROOT/pages/source.adoc
+++ b/modules/ROOT/pages/source.adoc
@@ -53,44 +53,9 @@ following output:
 
 == Configuration Summary
 
-=== Common Connector Settings
+[#connector-common-configuration]
+include::partial$connector-common-configuration.adoc[]
 
-[%width="100%",cols="m,a",opts=header]
-|===
-| Name
-| Description
-
-| connector.class | image:https://img.shields.io/badge/mandatory-008000[] `org.neo4j.connectors.kafka.source.Neo4jConnector`
-| key.converter | image:https://img.shields.io/badge/mandatory-008000[] Example: `io.confluent.connect.avro.AvroConverter` (see link:https://docs.confluent.io/platform/current/installation/configuration/connect/source-connect-configs.html#key-converter[converter class for keys])
-| value.converter | image:https://img.shields.io/badge/mandatory-008000[] Example: `io.confluent.connect.avro.AvroConverter` (see link:https://docs.confluent.io/platform/current/installation/configuration/connect/source-connect-configs.html#value-converter[converter class for values])
-| key.converter.schemas.enable | If `true` the key will be treated as a composite JSON object containing schema and the data. Default value is `false`
-| value.converter.schemas.enable | If `true` the value will be treated as a composite JSON object containing schema and the data. Default value is `false`
-| key.converter.schema.registry.url | [AvroConverter only] Avro Schema Registry URL
-| value.converter.schema.registry.url | [AvroConverter only] Avro Schema Registry URL
-| neo4j.uri | image:https://img.shields.io/badge/mandatory-008000[] Neo4j URI. (See link:https://neo4j.com/docs/java-manual/current/client-applications/#_examples[valid URI examples])
-| neo4j.database | Neo4j Database
-| neo4j.authentication.type | image:https://img.shields.io/badge/mandatory-008000[] one of `NONE`, `BASIC`, `KERBEROS`, `BEARER`, `CUSTOM`
-| neo4j.authentication.basic.username | Neo4j username. Required by `BASIC` authentication type
-| neo4j.authentication.basic.password | Neo4j password. Required by `BASIC` authentication type
-| neo4j.authentication.basic.realm | Basic authentication realm
-| neo4j.authentication.kerberos.ticket | Kerberos ticket. Required by `KERBEROS` authentication type
-| neo4j.authentication.bearer.token | Bearer authentication token. Required by `BEARER` authentication type
-| neo4j.authentication.custom.principal | Custom authentication principal. Required by `CUSTOM` authentication type
-| neo4j.authentication.custom.credentials | Custom authentication credentials. Required by `CUSTOM` authentication type
-| neo4j.authentication.custom.realm | Custom authentication realm
-| neo4j.authentication.custom.scheme | Custom authentication scheme. Required by `CUSTOM` authentication type
-| neo4j.connection-timeout | Connection timeout duration in milliseconds, seconds, minutes, hours or days. Examples: `1d`, `2h`, `3m`, `4s`, `5ms`
-| neo4j.max-retry-time | Maximum transaction retry duration in milliseconds, seconds, minutes, hours or days. Examples: `1d`, `2h`, `3m`, `4s`, `5ms`
-| neo4j.max-retry-attempts | Maximum transaction retry attempt count
-| neo4j.pool.max-connection-pool-size | Maximum connection pool size
-| neo4j.pool.connection-acquisition-timeout | Maximum connection pool acquisition timeout duration in milliseconds, seconds, minutes, hours or days. Examples: `1d`, `2h`, `3m`, `4s`, `5ms`
-| neo4j.pool.idle-time-before-connection-test | Duration of idle time before connection liveness check in seconds, minutes, hours or days. Examples: `1d`, `2h`, `3m`, `4s`, `5ms`
-| neo4j.pool.max-connection-lifetime | Max connection lifetime duration in seconds, minutes, hours or days. Examples: `1d`, `2h`, `3m`, `4s`, `5ms`
-| neo4j.security.encrypted | One of `true`, `false`
-| neo4j.security.trust-strategy | One of `TRUST_ALL_CERTIFICATES`, `TRUST_SYSTEM_CA_SIGNED_CERTIFICATES`, `TRUST_CUSTOM_CA_SIGNED_CERTIFICATES`
-| neo4j.security.cert-files | List of certificate files. Required by `TRUST_CUSTOM_CA_SIGNED_CERTIFICATES`
-
-|===
 
 === Common Source Settings
 
